components/shared/terminal/src/snapshots/knot_terminal__renderer__tests__completed_indent_0_interactive.snap
---
source: src/terminal/src/renderer.rs
expression: ctx.sanitized_output()
---
✔  Root Task (Done) [TIME]
