components/shared/terminal/src/snapshots/knot_terminal__renderer__tests__failed_indent_4_plain.snap
---
source: src/terminal/src/renderer.rs
expression: ctx.sanitized_output()
---
[CI]   > [START] Deep Stage
[CI]     [FAIL] Deep Stage (fail) [TIME]
[CI]     │ 
[CI]     │ issue:    Error
