components/shared/terminal/src/snapshots/knot_terminal__renderer__tests__lifecycle_2_waiting_plain.snap
---
source: src/terminal/src/renderer.rs
expression: ctx.sanitized_output()
---
[CI]     [TASK] Build Core
[CI]     [WAIT] Build Core (pending)
