components/shared/terminal/src/snapshots/knot_terminal__renderer__tests__lifecycle_3_running_interactive.snap
---
source: src/terminal/src/renderer.rs
expression: ctx.sanitized_output()
---
  > *  Build Core (compiling src/main.rs)
