components/shared/terminal/src/snapshots/knot_terminal__renderer__tests__lifecycle_4_skipped_interactive.snap
---
source: src/terminal/src/renderer.rs
expression: ctx.sanitized_output()
---
    ↷  Build Core (cached)
