components/shared/terminal/src/snapshots/knot_terminal__renderer__tests__msg_some_plain.snap
---
source: src/terminal/src/renderer.rs
expression: ctx.sanitized_output()
---
[CI] [WAIT] Task A
[CI] [WAIT] Task A (waiting for lock)
