components/shared/terminal/src/snapshots/knot_terminal__renderer__tests__running_indent_2_plain.snap
---
source: src/terminal/src/renderer.rs
expression: ctx.sanitized_output()
---
[CI]   [START] Sub Task
