components/shared/terminal/src/snapshots/knot_terminal__renderer__tests__separator_short_plain.snap
---
source: src/terminal/src/renderer.rs
expression: ctx.sanitized_output()
---
[CI]     ────────  Phase 2  ─────────────────────────────────────────────────────────────────────────────────
